[package]
name = "sirenia"
version = "0.24.52"
description = "a TEE runtime environment."
authors = ["The Chromium OS Authors"]
edition = "2018"

[[bin]]
name = "dugong"
path = "src/dugong.rs"

[[bin]]
name = "trichechus"
path = "src/trichechus.rs"

[profile.release]
panic = "abort"
overflow-checks = true

[build-dependencies]
chrono = "0.4"
chromeos_dbus_bindings = { path = "../chromeos-dbus-bindings"} # provided by ebuild

[dependencies]
dbus = "0.8"
flexbuffers = "0.1.1"
getopts = "0.2"
libc = "0.2.44"
libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
minijail = { path = "../../aosp/external/minijail/rust/minijail" } # provided by ebuild
openssl = "0.10.22"
serde = { version = "1.0.114", features = ["derive"] }
sys_util = { path = "../../platform/crosvm/sys_util" } # provided by ebuild
