[package]
name = "sirenia"
version = "0.24.52"
description = "a TEE runtime environment."
authors = ["The Chromium OS Authors"]
edition = "2018"

# This is here to absorb the workspace entries in the ebuild, since cros-rust
# doesn't patch the Cargo.toml files in the sub directories yet.
[workspace.metadata]
[workspace] # ignored by ebuild
# Enables the use of cargo test --workspace to check everything at once.
members = [
    "libsirenia",
    "manatee-client",
    "manatee-runtime",
]

[[bin]]
name = "dugong"
path = "src/dugong.rs"

[[bin]]
name = "trichechus"
path = "src/trichechus.rs"

[profile.release]
panic = "abort"
overflow-checks = true

[build-dependencies]
chrono = "0.4"
chromeos-dbus-bindings = { path = "../chromeos-dbus-bindings"} # provided by ebuild

[dependencies]
dbus = "0.8"
getopts = "0.2"
libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
libsirenia = { path = "libsirenia" } # provided by ebuild
serde = { version = "1.0.114", features = ["derive"] }
sirenia-rpc-macros = { path = "libsirenia/sirenia-rpc-macros" } # provided by ebuild
sync = { path = "../../platform/crosvm/sync" } # provided by ebuild
sys_util = { path = "../../platform/crosvm/sys_util" } # provided by ebuild
thiserror = "1.0.20"
